frontend/assets/styles/layout/header.scss
header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 5%;
    height: 75px;

    .logo{
        font-size: 2em;
        background: url('~/public/images/background.png') center no-repeat;
        background-size: 100%;
        color: $contrast;
        font-weight: bold;
        padding: 20px 30px;
        text-align: center;
        &--mobile{
            font-size: 32px;
            background-size: 100%;
            color: $contrast;
            font-weight: bold;
            text-align: left;
        }

    }

    button{
        background: unset;
        border: unset;
        &.logged__link{
            font-size: 20px;
        }
    }

    nav{
        display: flex;
        height: 100%;
        gap: 20px;
        .btn{
            display: block;
            height: 100%;
            text-align: center;
            align-content: center;
            font-weight: bold;
        }
    }

    .logged{
        align-items: center;
        font-size: 20px;
        &__link{
            box-shadow: 15px 0 0 0 rgb(255, 255, 255);
            transition: .3s;
        }

        .wrapper{
            padding: 0 10px;
            &.active{
                box-shadow: inset 0 -6px 0 0 $color-2;
                transition: .3s;
                &:hover{
                    box-shadow: inset 0 -24px 0 0 $color-2;
                }
            }
            &:not(.active) > a:hover{
                color: $color-2;
            }
        }
    }
}

.header{
    &--desktop{
        background: unset !important;
        @media screen and (max-width: 600px) {
            display: none;
        }
    }
    &--mobile{
        color: $contrast;
        background: url('~/public/images/background.png') #fff;
        background-size: 100%;
        background-position: center;
        padding: 30px;
        @media screen and (min-width: 600px) {
            display: none;
        }
        &.full{
            transition: .3s;
            position: fixed;
            top: 0;
            background-position: center;
            background-size: 100% 100%;
            width: 100vw;
            height: 100vh;
            flex-direction: column;
            > div{
                display: flex;
                justify-content: end;
                width: 100%;
                margin: 0 0 20vh 0;
            }            
        }
        > div{
            display: flex;
            align-items: center;
            justify-content: space-between;
            width: 100%;
        }
        nav{
            font-size: 20px;
            width: 100%;
            display: flex;
            flex-direction: column;
            justify-content: start;
        }
    }
    &__hamburger{
        display: flex;
        flex-direction: column;
        align-items: end;
        gap: 8px;
        cursor: pointer;
        &.active{
            gap: 0;
            span:nth-child(1){
                transform: rotate(-45deg) translate(-2px);
            }
            span:nth-child(2){
                display: none;
            }
            span:nth-child(3){
                transform: rotate(45deg) translate(-2px);
            }
        }
        &__bar{
            width: 40px; 
            height: 3px;
            background: $contrast;
            display: block;
            border-radius: 5px;
            transition: .3s;
            &--middle{
                width: 30px;
            }
        }
        &:hover{
            span{
                width: 40px;
            }
        }
    }
}

.header-settings-modal{
    &__section{
        display: flex;
        flex-direction: row;
        gap: 25px;
        cursor: pointer; 
        > p{
            transition: .2s;
            &:hover{
                color: lighten($color: $dark, $amount: 10);
            }
        }
        
    }
    &__profile{
        margin-top: 10px;
        display: flex;
        flex-direction: row;
        gap: 25px;
    }
    &__name{
        margin-top:7px;
        font-weight: bold;
    }
    &__info{
        margin-top: 40px;
        margin-bottom: 20px;
    }
    &__settings-list{
        margin-top: 30px;
        display: flex;
        flex-direction: column;
        gap: 15px;
        p{
            font-weight: bold;
        }
        span{
            font-weight: normal;
            margin-left: 7px;
        }
        div{
            display: flex;
            gap: 10px;
            
        }
    }
    &__allowedChanges{
        margin-top: 10px;
    }
}

.account-settings-modal{
    .modal{
        min-width: unset;
    }
    h3{
        margin-bottom: 15px;
    }
    h4{
        margin-bottom: 30px;
        @media screen and (max-width: 600px) {
            margin-bottom: 15px;
        }
    }
}

/* Adaptation des couleurs en fonction de la couleur du groupe */

.color-5AB7EE{

    .logo{
        background: $color-1;
    }

    .shine{
        background: $color-1;
        -webkit-background-clip: text;
        background-clip: text;
        background-size: 150px;
    }

    .logged .wrapper{
        &.active{
            box-shadow: inset 0 -6px 0 0 $color-1;
            &:hover{
                box-shadow: inset 0 -24px 0 0 $color-1;
            }
        }
        &:not(.active) > a:hover{
            color: $color-1;
        }
    }

    &.header--mobile{
        background: $color-1;
    }
}

.color-FDBE55{

    .logo{
        background: $color-2;
    }

    .shine{
        background: $color-2;
        -webkit-background-clip: text;
        background-clip: text;
        background-size: 150px;
    }

    .logged .wrapper{
        &.active{
            box-shadow: inset 0 -6px 0 0 $color-3;
            &:hover{
                box-shadow: inset 0 -24px 0 0 $color-3;
            }
        }
        &:not(.active) > a:hover{
            color: $color-2;
        }
    }

    &.header--mobile{
        background: $color-2;
    }
}

.color-FB961F{

    .logo{
        background: $color-3;
    }

    .shine{
        background: $color-3;
        -webkit-background-clip: text;
        background-clip: text;
        background-size: 150px;
    }

    .logged .wrapper{
        &.active{
            box-shadow: inset 0 -6px 0 0 $color-3;
            &:hover{
                box-shadow: inset 0 -24px 0 0 $color-3;
            }
        }
        &:not(.active) > a:hover{
            color: $color-3;
        }
    }

    &.header--mobile{
        background: $color-3;
    }
}

.color-13329F{

    .logo{
        background: $color-4;
    }

    .shine{
        background: $color-4;
        -webkit-background-clip: text;
        background-clip: text;
        background-size: 150px;
    }

    .logged .wrapper{
        &.active{
            box-shadow: inset 0 -6px 0 0 $color-4;
            &:hover{
                box-shadow: inset 0 -24px 0 0 $color-4;
            }
        }
        &:not(.active) > a:hover{
            color: $color-4;
        }
    }

    &.header--mobile{
        background: $color-4;
    }
}

.color-8700CF{

    .logo{
        background: $color-5;
    }

    .shine{
        background: $color-5;
        -webkit-background-clip: text;
        background-clip: text;
        background-size: 150px;
    }

    .logged .wrapper{
        &.active{
            box-shadow: inset 0 -6px 0 0 $color-5;
            &:hover{
                box-shadow: inset 0 -24px 0 0 $color-5;
            }
        }
        &:not(.active) > a:hover{
            color: $color-5;
        }
    }

    &.header--mobile{
        background: $color-5;
    }

}

.color-F669D9{

    .logo{
        background: $color-6;
    }

    .shine{
        background: $color-6;
        -webkit-background-clip: text;
        background-clip: text;
        background-size: 150px;
    }

    .logged .wrapper{
        &.active{
            box-shadow: inset 0 -6px 0 0 $color-6;
            &:hover{
                box-shadow: inset 0 -24px 0 0 $color-6;
            }
        }
        &:not(.active) > a:hover{
            color: $color-6;
        }
    }

    &.header--mobile{
        background: $color-6;
    }
}

.color-DE3D59{
    background: $color-7;

    .logo{
        background: $color-7;
    }

    .shine{
        background: $color-7;
        -webkit-background-clip: text;
        background-clip: text;
        background-size: 150px;
    }

    .logged .wrapper{
        &.active{
            box-shadow: inset 0 -6px 0 0 $color-7;
            &:hover{
                box-shadow: inset 0 -24px 0 0 $color-7;
            }
        }
        &:not(.active) > a:hover{
            color: $color-7;
        }
    }

    &.header--mobile{
        background: $color-7;
    }

}

